@@ -1,13 +1,18 @@
 /*
  * $Id$
  *
- * Copyright 2013, 2014 Allen D. Ball.  All rights reserved.
+ * Copyright 2013 - 2015 Allen D. Ball.  All rights reserved.
  */
 package ball.upnp;
 
+import ball.annotation.ServiceProviderFor;
+import ball.tomcat.EmbeddedContextConfigurator;
+import ball.tomcat.EmbeddedLifecycleListener;
+import ball.tomcat.EmbeddedTomcatConfigurator;
 import java.net.URI;
 import java.util.Arrays;
 import java.util.List;
+import org.apache.catalina.Server;
 
 /**
  * {@link.uri http://www.upnp.org/ UPnP} {@link MediaServer}
@@ -23,6 +28,8 @@ import java.util.List;
  * @author {@link.uri mailto:ball@iprotium.com Allen D. Ball}
  * @version $Revision$
  */
+@ServiceProviderFor({ EmbeddedTomcatConfigurator.class, EmbeddedContextConfigurator.class, EmbeddedLifecycleListener.class })
+@EmbeddedLifecycleListener.For({ Server.class })
 public class MediaServer extends Device {
     public static final String TYPE =
         "urn:schemas-upnp-org:device:MediaServer:4";
